test/expected/explain_ff_i_v-02.out
explain void f( int ()() )
                    ^
21: error: function returning function is illegal; did you mean function returning pointer to function?
